--- a/src/components/SongForm/SongForm.css
+++ b/src/components/SongForm/SongForm.css
@@ -1,8 +1,8 @@
 .form{
-    margin-top: 2rem;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 1rem;
+    margin-bottom: 1rem;
 }
 
 .formBtn{
